--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: methylPipe
 Type: Package
 Title: Base resolution DNA methylation data analysis
-Version: 0.99.7
-Date: 2014-09-11
+Version: 0.99.8
+Date: 2014-09-13
 Author: Kamal Kishore
 Maintainer: Kamal Kishore <kamal.fartiyal84@gmail.com>
 Description: Package for memory efficient analysis of base resolution
         DNA methylation data
 License: GPL(>=2)
 LazyLoad: yes
-Imports: marray, gplots, IRanges, BiocGenerics, rtracklayer, Gviz,
+Imports: marray, gplots, IRanges, BiocGenerics, Gviz,
         GenomicAlignments, Biostrings, parallel, data.table,
         GenomeInfoDb, S4Vectors
 Depends: R (>= 3.0), methods, grDevices, graphics, stats, utils,
