--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,13 @@
 Package: methylPipe
 Type: Package
 Title: Base resolution DNA methylation data analysis
-Version: 0.99.8
-Date: 2014-09-13
+Version: 0.99.9
+Date: 2014-09-15
 Author: Kamal Kishore
 Maintainer: Kamal Kishore <kamal.fartiyal84@gmail.com>
-Description: Package for memory efficient analysis of base resolution
-        DNA methylation data
+Description: Memory efficient analysis of base resolution DNA methylation data in both 
+  the CpG and non-CpG sequence context. Integration of DNA methylation data derived from 
+  any methodology providing base- or low-resolution data.
 License: GPL(>=2)
 LazyLoad: yes
 Imports: marray, gplots, IRanges, BiocGenerics, Gviz,
@@ -18,3 +19,4 @@ Suggests: BSgenome.Hsapiens.UCSC.hg18,
         TxDb.Hsapiens.UCSC.hg18.knownGene, knitr, MethylSeekR
 VignetteBuilder: knitr
 biocViews: MethylSeq, DNAMethylation, Coverage, Sequencing
+
