--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,24 +1,20 @@
 useDynLib(methylPipe, .registration=TRUE)
 import(methods)
-import(Gviz)
-import(Rsamtools)
-import(IRanges)
+import(BiocGenerics)
 import(S4Vectors)
+import(IRanges)
+import(GenomicRanges)
 import(Biostrings)
+import(Rsamtools)
+import(BSgenome)
+import(Gviz)
 
 importFrom(GenomicAlignments,readGAlignments,seqnames, width, coverage)
 importFrom(marray, maPalette)
 importFrom(gplots, heatmap.2)
-importFrom(BiocGenerics,rbind, width, strand, "strand<-", as.data.frame, unlist)
 importFrom(parallel, makeCluster)
 importFrom(data.table,fread)
-importFrom(GenomicRanges,GRanges, coverage, rowData,  assays)
 importFrom(GenomeInfoDb,seqlengths,"seqlengths<-",seqnames)
-
-importMethodsFrom(BiocGenerics, clusterApplyLB, clusterEvalQ)
-
-importClassesFrom(GenomicRanges,SummarizedExperiment)
-importMethodsFrom(GenomicRanges,SummarizedExperiment)
 
 exportPattern("^[^\\.]")
 
