--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: methylPipe
 Type: Package
 Title: Base resolution DNA methylation data analysis
-Version: 1.3.3
-Date: 2015-05-08
+Version: 1.3.4
+Date: 2015-06-18
 Author: Kamal Kishore
 Maintainer: Kamal Kishore <kamal.fartiyal84@gmail.com>
 Description: Memory efficient analysis of base resolution DNA methylation data in both 
@@ -12,7 +12,7 @@ License: GPL(>=2)
 LazyLoad: yes
 Imports: marray, gplots, IRanges, BiocGenerics, Gviz, GenomicAlignments, Biostrings,
   parallel, data.table, GenomeInfoDb, S4Vectors
-Depends: R (>= 3.2.0), methods, grDevices, graphics, stats, utils, GenomicRanges, SummarizedExperiment, Rsamtools 
+Depends: R (>= 3.2.0), methods, grDevices, graphics, stats, utils, GenomicRanges, SummarizedExperiment (>= 0.2.0), Rsamtools 
 Suggests: BSgenome.Hsapiens.UCSC.hg18,
         TxDb.Hsapiens.UCSC.hg18.knownGene, knitr, MethylSeekR
 VignetteBuilder: knitr
